Add simple styling to the game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <h1>ROCK PAPER SCISSORS</h1>
+    </nav>
+    <div class="buttons">
+        <button class="btn" id="Rock" ><img src="images/rock.png" alt=""></button>
+        <button class="btn" id="Paper"><img src="images/paper.png" alt=""></button>
+        <button class="btn" id="Scissors"><img src="images/scissors.png" alt=""></button>
+    </div>
+    <div class="results">
+        <p>You:</p>
+        <p>Computer:</p>
+    </div>
 </body>
 </html>
