--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         <h1>ROCK PAPER SCISSORS</h1>
     </nav>
     <div class="buttons">
-        <button class="btn" id="Rock" ><img src="images/rock.png" alt=""></button>
-        <button class="btn" id="Paper"><img src="images/paper.png" alt=""></button>
-        <button class="btn" id="Scissors"><img src="images/scissors.png" alt=""></button>
+        <button class="btn" id="rock" ><img src="images/rock.png" alt=""></button>
+        <button class="btn" id="paper"><img src="images/paper.png" alt=""></button>
+        <button class="btn" id="scissors"><img src="images/scissors.png" alt=""></button>
     </div>
     <div class="results">
-        <p>You:</p>
-        <p>Computer:</p>
+        <p>Select ROCK, PAPER or SCISSORS</p>
     </div>
 </body>
 </html>
