Show modal when game is finished
Added simple modal. Allow to play the game again
once button is clicked. Final message does not
display the winner.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
     <div class="results">
         <p>Select ROCK, PAPER or SCISSORS</p>
     </div>
+    <div class="modal">
+        <div class="modal-content">
+            <h1>Game over</h1>
+            <button class="btn modal-btn">Play again</button>
+        </div>
+    </div>
 </body>
 </html>
