--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <button class="btn" id="scissors"><img src="images/scissors.png" alt=""></button>
     </div>
     <div class="results">
+        <div class="results-img">
+            <img id="player-img" src="images/question.jpg" alt="">
+            <img id="computer-img"src="images/question.jpg" alt="">
+        </div>
         <p>Select ROCK, PAPER or SCISSORS</p>
     </div>
     <div class="modal">
